--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Download kode dari repositori Anda
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Run a one-line script
-        run: echo "Hello, world! This workflow is working."
+
+      # Step 2: Setup environment Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Bisa disesuaikan dengan versi yang Anda pakai
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # Step 4: Jalankan test
+      - name: Run tests
+        run: npm test
